--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body{
+  background-color: #333;
+}
 .container {
   width: 500px;
-  height: 300px;
+  height: 130px;
   text-align: center;
   margin: 100px auto;
+  background-color: rgb(205, 190, 190);
+  border-radius: 5px;
+}
+.container :has(.movie){
+ height: none;
 }
 
 h1 {
@@ -23,6 +37,17 @@ button {
   border: none;
   cursor: pointer;
 }
+#refreshButton {
+  margin: 15px;
+  border-radius: 50px;
+  color: rgb(205, 190, 190);
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+  background-color: #333;
+  transition: transform 1s ease, background-color 0.2s ease; /* Cambio suave al soltar el clic */
+}
+
 
 #results {
   margin-top: 20px;
@@ -32,7 +57,7 @@ button {
 .movie {
   min-height: 200px;
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 20px;
   background-color: #f5f5f5;
   border-radius: 5px;
 }
